adapted start of playback in oder to serve aLogic+fwStrategy folder instead of only aLogic

--- a/networkPlayer.html
+++ b/networkPlayer.html
@@ -36,8 +36,8 @@
 		<fieldset>
 				<label id="aLogicLabel" for="aLogic">Adaption-logic</label>
 				<select name"aLogic" id="aLogic">
-					<option selected="selected" value="rate">rate-based</option>
-					<option value="buffer">buffer-based</option>
+					<option selected="selected" value="rate-based">rate-based</option>
+					<option value="buffer-based">buffer-based</option>
 				</select>
 
 				<label id="fwStrategyLabel" for="fwStrategy">Forwarding-strategy</label>
